Fix z-index issue with the Image Background Removal Spotlight.

--- a/plugins/woo-ai/src/components/tour-spotlight/tour-spotlight.scss
+++ b/plugins/woo-ai/src/components/tour-spotlight/tour-spotlight.scss
@@ -1,3 +1,3 @@
-body.post-type-product .woocommerce-tour-kit {
-	z-index: 160001; /* value chosen to appear above media library modal */
+div.tour-kit.woocommerce-tour-kit {
+	z-index: auto; /* value chosen to appear above media library modal */
 }
